@@ -34,6 +34,7 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+11/26 F Fixed mysql duplicate key errors when keepusers disabled  [#454]
 11/19 F Fixed socket issue that could lead to connection loss     [ #00]
 11/19 F Added some missing user and channel modes to inspircd11   [ #00]
 11/19 F Fixed SVSMODE and SVS2MODE parsing in unreal32 module     [#449]
